[package]
name = "komodo_rpc_client"
description = "A Komodo RPC Client, written in Rust."
repository = "https://github.com/jorian/komodorpc-rust-client"
license = "MIT"
version = "0.1.0"
authors = ["Jorian <jorian@outlook.com>"]
exclude = [
    "main.rs"
]

[dependencies]
base64 = "0.9"
serde = "1"
serde_derive = "1"
serde_json = "1"
bitcoin = { version = "0.14", features = ["serde"] }
#hex = "0.3"
dirs = "1.0"
reqwest = "0.9.5"
#![feature(uniform_paths)]
os_info = "1.1.0"